# fpl-assistant

./: .gitignore  .replit  API_TESTING_REPORT.md  CODE_QUALITY_AUDIT_REPORT.md  COMPREHENSIVE_API_TESTING_REPORT.md  DATABASE_INTEGRITY_REPORT.md  IOS_INSTALLATION_GUIDE.md  README.md  STATUS_REPORT.md  design_guidelines.md  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  test-api-endpoints.sh  vite.config.ts  vitest.config.ts
.claude/: launch.json
attached_assets/: Pasted--ENGLISH-PREMIER-LEAGUE-PUBLIC-API-ENDPOINT-1760562193167_1760562193167.txt  Pasted--English-Premier-League-API-Endpoints-copy-paste-safe-All-URLs-are-plain-strings-with-placehol-1760562530088_1760562530089.txt  Pasted--Secure-3PSIDCC-AKEyXzUqi7fRZZ-JaR7xBMOqMhrb8MiqCh1s564-gtIuYITTStraTmMNEh35FH-CIqnfhiDnNw-google--1760980723764_1760980723765.txt  Pasted--ga-Z815NWVZJY-GS2-1-s1760906586-o13-g1-t1760907217-j56-l0-h0-cf-bm-Bs4WELW8UMcUUhNLSTzqgAgNm7dOa-1760908703906_1760908703907.txt  Pasted--html-lang-en-class-light-theme-style-vh-3-33px-sbWidth-0px-head-style-id-react-ari-1760899081721_1760899081723.txt  Pasted-Gameweek-Planner-AI-powered-gameweek-analysis-and-recommendations-Planning-for-GW-10-Sync-Latest-Tea-1761972186175_1761972186176.txt  Pasted-Product-Vision-Business-Case-Vision-Build-a-web-accessible-tool-that-helps-NRL-Fantasy-coaches-pr-1763537264106_1763537264107.txt
client/: index.html
nrl_fantasy/: DATA_SOURCES.md  __init__.py  config.py  init_db.py  main.py  requirements.txt
server/: actual-points.ts  ai-client.ts  ai-impact-analysis.ts  fpl-api.ts  (+41 more)
(+73 files in other folders)
